fixed overflow issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,4 @@
-header {
+  header {
   border-bottom: solid;
   border-spacing: 0;
   border-color: #cccccc;
@@ -72,7 +72,8 @@ body {
   margin: 0;
   font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
   font-size: 18px;
-
+  overflow-x: hidden;
+  width: 100%;
   color: #333;
   }
 
